--- a/reactReduxBoiler-master/package.json
+++ b/reactReduxBoiler-master/package.json
@@ -51,6 +51,7 @@
     "knex": "^0.12.6",
     "lodash": "^3.10.1",
     "material-ui": "^0.16.6",
+    "moment": "^2.18.1",
     "morgan": "^1.7.0",
     "mysql": "^2.12.0",
     "nodemon": "^1.11.0",
@@ -60,6 +61,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
+    "react-big-calendar": "^0.13.0",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
     "react-google-maps": "^4.11.0",
